Bug 516475 - [5.3/5.4] When making a new bundle file, the thumbnail view of resources added to the "Selected" area appear as white squares
Summary: [5.3/5.4] When making a new bundle file, the thumbnail view of resources adde...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-21 20:17 UTC by Door1
Modified: 2026-03-02 11:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the bug (144.42 KB, image/jpeg)
2026-02-21 20:17 UTC, Door1
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2026-02-21 20:17:02 UTC
Created attachment 189929 [details]
Screenshot of the bug

SUMMARY
[5.3/5.4] When making a new bundle file, the thumbnail view of resources added to the "Selected" area appear as white squares

See attachment for a screenshot of the bug.

STEPS TO REPRODUCE
1. Settings, Manage Resource Libraries, Create Bundle
2. Click on a resource, such as a brush tip or preset, to add to the bundle you want to make

OBSERVED RESULT
The selected resources will appear as white squares in the thumbnail view of the "Selected" area

EXPECTED RESULT
The selected resources will appear as their actual authentic thumbnails in the thumbnail view of the "Selected" area

SOFTWARE/OS VERSIONS
Android 16
Krita 5.4 nightly
arm64
git a7adbbc5 (Feb. 21, 2026)
Comment 1 Freya Lupen 2026-02-22 17:59:17 UTC
Confirmed.
The selected thumbnails show fine in Details mode, but in Thumbnails mode it fails to fetch the image from KisResourceThumbnailCache due to some problem with the model index.

This is most likely a regression of "Bundle Creator and resource thumbnail fixes" (https://invent.kde.org/graphics/krita/-/merge_requests/2283).
Comment 2 Dmitry Kazakov 2026-03-02 11:35:06 UTC
Git commit 2cd1d6654f81f05f5ff30be069a0dddc9fbe884a by Dmitry Kazakov.
Committed on 02/03/2026 at 11:30.
Pushed by dkazakov into branch 'master'.

Fix thumbnails in Create Bundle dialog

The indexes in the selection widget are not "global", i.e. they do not
come from the main resources model. Hence we should resolve the proper index before passing it to KisResourceThumbnailPainter.

M  +19   -16   libs/resourcewidgets/KisResourceItemDelegate.cpp
M  +12   -1    libs/resourcewidgets/KisResourceItemDelegate.h
M  +6    -7    libs/resourcewidgets/KisResourceThumbnailPainter.cpp
M  +1    -1    libs/resourcewidgets/KisResourceThumbnailPainter.h
M  +2    -1    plugins/extensions/resourcemanager/page_resource_chooser.cpp

https://invent.kde.org/graphics/krita/-/commit/2cd1d6654f81f05f5ff30be069a0dddc9fbe884a
Comment 3 Dmitry Kazakov 2026-03-02 11:36:33 UTC
Git commit a573bf50d8c53431534a9008cdca7fd3dd2bcb96 by Dmitry Kazakov.
Committed on 02/03/2026 at 11:36.
Pushed by dkazakov into branch 'krita/6.0'.

Fix thumbnails in Create Bundle dialog

The indexes in the selection widget are not "global", i.e. they do not
come from the main resources model. Hence we should resolve the proper index before passing it to KisResourceThumbnailPainter.

M  +19   -16   libs/resourcewidgets/KisResourceItemDelegate.cpp
M  +12   -1    libs/resourcewidgets/KisResourceItemDelegate.h
M  +6    -7    libs/resourcewidgets/KisResourceThumbnailPainter.cpp
M  +1    -1    libs/resourcewidgets/KisResourceThumbnailPainter.h
M  +2    -1    plugins/extensions/resourcemanager/page_resource_chooser.cpp

https://invent.kde.org/graphics/krita/-/commit/a573bf50d8c53431534a9008cdca7fd3dd2bcb96