Fix thumbnails in Create Bundle dialog

The indexes in the selection widget are not "global", i.e. they do not
come from the main resources model. Hence we should resolve the proper index before passing it to KisResourceThumbnailPainter.

BUG:516475